@@ -66,6 +66,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CQL\Unit.cs" />
+    <Compile Include="Transport\Connection_ResultEnumerator.cs" />
     <Compile Include="Utils\DictionaryInitializer.cs" />
     <Compile Include="Utils\HashSetInitializer.cs" />
     <Compile Include="Utils\ICollectionInitializer.cs" />
