@@ -1,5 +1,7 @@
 version 2.2.0
 - POCO is now using DynamicMethod instead of Reflection
+- support for IDeserializationCallback
+- fix failure on connection on IO errors
 
 version 2.1.2
 - fixed issue 9 (https://github.com/pchalamet/cassandra-sharp/issues/9)
